# kiro-generator

./: .gitignore  .tombi.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  KIRO-CONF-REFERENCE.md  LICENSE  LICENSE-MIT  README.md  TODO.md  codecov.yml  release.toml  rustfmt.toml  skill-design.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  additional-prompt.md  dependabot.yml  rust-ci.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/rust-config/: action.yml
.github/actions/rust-init/: action.yml
.github/ci-configs/: rust.yml
.github/workflows/: pages.yml  pr-review.yml  release-bin.yml  release.yml  scheduled.yml  test.yml
.kiro/generators/: alone.toml  aws-test.kdl  aws-test.toml  bad.kdl  base.kdl  base.toml  dependabot.kdl  dependabot.toml  kg.kdl  kg.toml
.kiro/generators/agents/: aws-test.toml  bad.toml  base.toml  dependabot.toml  rust.toml
.kiro/generators/agents/aws-mcps/: eks.toml  iam.toml
.kiro/generators/manifests/: kg.toml  project-resources.toml  rust.toml
.kiro/global/: aws-test.kdl  kg.kdl
.kiro/global/agents/: orphan-annie.toml
.kiro/prompts/: pr-fill.md
.kiro/steering/: diff.md  macro.md  product.md  structure.md  tech.md
data/: test-decoding.toml  test-file-source.toml  test-merge-agent.toml
data/kiro/bootstrap/: default.json  rust.json
data/kiro/generators/agents/: aws-test.toml  base.toml  dependabot.toml
data/kiro/global/manifests/: kg.toml
docs/: .mintignore  agent.json  book.toml  custom.css  docs.json  install.mdx  manifest.json
docs/.well-known/agent-skills/: index.json  kg-helper
docs/content/advanced/: debugging.mdx  systemd-watch.mdx
docs/content/configuration/: defining-agents.mdx  editor-support.mdx  inheritance.mdx  structure.mdx  templates.mdx
docs/content/getting-started/: index.mdx  install.mdx  quickstart.mdx
docs/content/migration/: guided-migration.mdx
docs/facet/: _index.md  extension-attributes.md  partial.md  shape.md
docs/facet/contribute/: architecture.md  core-concepts.md  metrics.md  pr-process.md
docs/facet/extend/: _index.md  extension-attributes.md  format-crate.md  peek.md  solver.md
docs/facet/guide/: _index.md  ecosystem.md  faq.md  why.md
docs/facet/guide/serde/: _index.md
docs/facet/reference/: _index.md
docs/facet/reference/attributes/: _index.md
docs/facet/reference/format-crate-matrix/: _index.md
docs/facet/showcases/: _index.md  args.md  derive.md  html.md
docs/kiro/: KIRO-CONF-REFERENCE.md  KIRO-FILES.md  KIRO-HOOKS.md  KIRO-MCP.md  KIRO-STEERING.md  KIRO-SUBAGENTS.md  KIRO-TOOLS.md  chat-configuration.md  configuration-reference.md  hooks.md  prompts.md  skills.md  steering.md  subagents.md  sync-docs.sh
docs/src/: SUMMARY.md  agent.json  guided-migration.md  index.md  install.md  manifest.json  quickstart.md  usage.md
docs/src/advanced/: debugging.md  knowledge-bases.md  organizing.md  systemd-watch.md
docs/src/config/: agents.md  defining-agents.md  files.md  inheritance.md  manifests.md  structure.md  templates.md
docs/src/reference/: cli.md  schema.md
examples/basic/agents/: default.toml  git.toml
examples/basic/manifests/: kg.toml
examples/basic/systemd/: global.env  home.env
facet-docs/contribute/: _index.md  adding-types.md  derive-macro.md  setup.md
facet-docs/extend/: partial.md
facet-docs/guide/: dynamic-values.md  getting-started.md  structstruck.md
facet-docs/reference/format-crate-matrix/: _index.md
facet-docs/showcases/: assert.md  diff.md  pretty.md
fixtures/agent-test/: agent-test.toml
fixtures/kiro/generators/agents/: aws-test.toml  base.toml
fixtures/kiro/generators/manifests/: kg.toml
fixtures/kiro/global/agents/: aws-test.toml
fixtures/manifest-test/: test-decoding.toml  test-merge-agent.toml
kg-macro/: Cargo.toml
kg-macro/src/: lib.rs
pkg/debian/: postinst
resources/: SKILL.md  default.kdl  example.kdl  field-research.md  kg.kdl
resources/agents/: kg-helper.json  prompt.md
resources/config-eamples/textspace-mud/agents/: textspace-coordinator.json  web-tester.json
resources/config-examples/opensearch-feature-explorer/: group-release.json  planner.json
resources/facet/: assertions.md  attributes.md  dynamic-values.md  ecosystem.md  extension-attributes.md  faq.md  getting-started.md  macro-diagnostics.md  shape.md  tracing.md  variance.md
resources/kg-helper/: SKILL.md
resources/kg-helper/assets/: mappings.json
resources/kg-helper/references/: bootstrap.md  migration.md  schemas.md  templates.md
resources/kiro/: built-in-tools.md  mcp-configuration.md
resources/systemd/: kiro-generator-local@.path  kiro-generator-local@.service  kiro-generator.path  kiro-generator.service
schemas/: agent.json  default-kiro.json  kiro-agent.json  kiro-tools.json  manifest.json
scripts/: cargo-deps.sh  cargo-sort.sh  check-skill.sh  coverage-report.sh  pre-commit  test-ci.sh  test-kg-bin-ci.sh  update-kg-helper-prompt.sh
src/: commands.rs  config.rs  error.rs  json_schema.rs  main.rs  merging_format.rs  output.rs  schema.rs  schema_optional.rs  source.rs  tracing_init.rs  util.rs
src/agent/: custom_tool.rs  diff.rs  hook.rs  kg_agent.rs  mcp_config.rs  mod.rs  tools.rs  wrapper_types.rs
src/commands/: bootstrap.rs  execute.rs  mod.rs  runtime.rs  tree.rs  watch_linux.rs  watch_peasants.rs
src/config/: agent.rs  agent_file.rs  hook.rs  knowledge.rs  manifest.rs  mcp.rs  merge.rs  mod.rs  native.rs
src/generator/: config_location.rs  discover.rs  merge.rs  mod.rs  source.rs
src/kg_config/: agent_file.rs  knowledge.rs  manifest.rs  mcp.rs  merge.rs  mod.rs  native.rs  search.rs  subagent.rs
src/kg_config/resources/: file.rs  mod.rs  skill.rs
src/kiro/: custom_tool.rs  diff.rs  hook.rs  mod.rs  tools.rs
src/os/: mod.rs  systemd.rs
src/os/fs/: mod.rs  unix.rs  windows.rs
src/tree/: dependents.rs  details.rs  mod.rs  search.rs  summary.rs
