[package]
name = "kiro-generator"
version = "0.1.1-rc.6"
edition = "2024"
description = "Kiro Agent CLI configuration management"
documentation = "https://docs.rs/q-generator"
readme = "README.md"
homepage = "https://github.com/dougEfresh/q-generator"
repository = "https://github.com/dougEfresh/q-generator"
license = "MIT"
keywords = ["AI", "agents", "cli", "kiro"]
categories = ["command-line-interface", "config"]

[package.metadata.deb]
maintainer = "dougefresh <dchimento@gmail.com>"
section = "utility"
priority = "optional"
assets = [
    ["target/release/kg", "usr/bin/", "755"],
    { source = "README.md", dest = "usr/share/doc/kiro-generator/README", mode = "644" },
]

[[bin]]
name = "kg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env", "unicode"] }
color-eyre = "0.6.5"
colored = "3.0.0"
dirs = "6"
emojis-rs = "0.1.3"
enum-iterator = "2.3.0"
facet = { version = "0.43.1", features = ["auto-traits", "reflect", "simd"] }
facet-diff = "0.43.1"
facet-json = { version = "0.43.1", features = ["std", "validate"] }
facet-json-schema = "0.43.1"
facet-toml = { version = "0.43.1", features = ["std"] }
facet-value = { version = "0.43.1", features = ["std"] }
futures = "0.3"
jsonschema = { version = "0.37", default-features = false, features = [
  "resolve-async",
  "resolve-file"
] }
serde_json = { version = "1" }
serde_yaml2 = "0.1.3"
super-table = { version = "1", features = ["custom_styling"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
nix = { version = "0.30.1", features = ["user"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[profile.release]
debug = 1  # Line numbers only (smaller than full debug=2)
strip = false  # Keep symbols for better backtraces
lto = "thin"  # Faster builds than "fat", still good optimization
codegen-units = 16  # Default, balances compile time vs optimization
