[package]
name = "kiro-generator"
version = "0.1.2-rc.3"
edition = "2024"
description = "Kiro Agent CLI configuration management"
documentation = "https://docs.rs/q-generator"
readme = "README.md"
homepage = "https://kiro-generator.io"
repository = "https://github.com/kiro-generator/kiro-generator"
license = "MIT"
keywords = ["AI", "agents", "cli", "kiro"]
categories = ["command-line-interface", "config"]

[package.metadata.deb]
maintainer = "dougefresh <dchimento@gmail.com>"
section = "utility"
priority = "optional"
maintainer-scripts = "pkg/debian/"
assets = [
    ["target/release/kg", "usr/bin/", "755"],
    { source = "README.md", dest = "usr/share/doc/kiro-generator/README.md", mode = "644" },
    # Systemd units
    { source = "resources/systemd/kiro-generator.service", dest = "usr/lib/systemd/user/", mode = "644" },
    { source = "resources/systemd/kiro-generator-local@.service", dest = "usr/lib/systemd/user/", mode = "644" },
    { source = "resources/systemd/kiro-generator.path", dest = "usr/lib/systemd/user/", mode = "644" },
    { source = "resources/systemd/kiro-generator-local@.path", dest = "usr/lib/systemd/user/", mode = "644" },
    # Default environment files
    { source = "resources/systemd/global.env", dest = "etc/kg/", mode = "644" },
    { source = "resources/systemd/home.env", dest = "etc/kg/", mode = "644" },
    # kg-helper skill documentation
    { source = "resources/kg-helper/SKILL.md", dest = "usr/share/doc/kiro-generator/kg-helper/SKILL.md", mode = "644" },
    { source = "resources/kg-helper/references/bootstrap.md", dest = "usr/share/doc/kiro-generator/kg-helper/references/bootstrap.md", mode = "644" },
    { source = "resources/kg-helper/references/schemas.md", dest = "usr/share/doc/kiro-generator/kg-helper/references/schemas.md", mode = "644" },
    { source = "resources/kg-helper/references/templates.md", dest = "usr/share/doc/kiro-generator/kg-helper/references/templates.md", mode = "644" },
    # JSON schemas
    { source = "schemas/agent.json", dest = "usr/share/doc/kiro-generator/schemas/agent.json", mode = "644" },
    { source = "schemas/manifest.json", dest = "usr/share/doc/kiro-generator/schemas/manifest.json", mode = "644" },
    { source = "schemas/kiro-agent.json", dest = "usr/share/doc/kiro-generator/schemas/kiro-agent.json", mode = "644" },
]
conf-files = ["/etc/kg/global.env", "/etc/kg/home.env"]

[workspace]
members = ["kg-macro"]

[[bin]]
name = "kg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["cargo", "derive", "env", "unicode"] }
color-eyre = "0.6.5"
colored = "3.0.0"
dirs = "6"
emojis-rs = "0.1.3"
enum-iterator = "2.3.0"
# Core facet dependencies
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
# facet-pretty = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
# facet-reflect = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-toml = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
facet-value = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
# facet = { version = "0.43.2", features = ["auto-traits", "reflect", "simd"] }
# facet-diff = "0.43.2"
# facet-json = { version = "0.43.2", features = ["std", "validate"] }
# facet-json-schema = "0.43.2"
# facet-toml = { version = "0.43.2", features = ["std"] }
# facet-value = { version = "0.43.2", features = ["std"] }
futures = "0.3"
jsonschema = { version = "0.40", default-features = false, features = ["resolve-file"] }
kg-macro = { path = "kg-macro" }
# facet-core = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.43" }
rediff = { git = "https://github.com/bearcove/rediff.git", branch = "main", version = "1.0.0" }
serde_json = { version = "1" }
serde_yaml2 = "0.1.3"
super-table = { version = "1", features = ["custom_styling"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
zbus = "5.13.2"

[dev-dependencies]
nix = { version = "0.30.1", features = ["user"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }

[profile.release]
debug = 1  # Line numbers only (smaller than full debug=2)
strip = false  # Keep symbols for better backtraces
lto = "thin"  # Faster builds than "fat", still good optimization
codegen-units = 16  # Default, balances compile time vs optimization
